--- a/book.bib
+++ b/book.bib
@@ -9,9 +9,29 @@
   url = {http://yihui.name/knitr/},
 }
 
-@article{ng2002discriminative,
-  title = {On discriminative vs. generative classifiers: A comparison of logistic regression and naive bayes},
-  author = {Ng, Andrew Y and Jordan, Michael I},
-  year = {2002},
-  url = {https://papers.nips.cc/paper/2020-on-discriminative-vs-generative-classifiers-a-comparison-of-logistic-regression-and-naive-bayes.pdf},
+@book{james2013introduction,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  volume={112},
+  year={2013},
+  publisher={Springer}
+}
+
+@book{hastie2001elements,
+  title={The elements of statistical learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  volume={1},
+  year={2001},
+  publisher={Springer series in statistics New York}
+}
+
+@article{harrison1978hedonic,
+  title={Hedonic housing prices and the demand for clean air},
+  author={Harrison Jr, David and Rubinfeld, Daniel L},
+  journal={Journal of environmental economics and management},
+  volume={5},
+  number={1},
+  pages={81--102},
+  year={1978},
+  publisher={Elsevier}
 }
