--- a/docs/1.2-stat-prob-basics.md
+++ b/docs/1.2-stat-prob-basics.md
@@ -1,3 +1,225 @@
+# Basics of Probability and Statistics
+
+## Random number generation 
+
+Random number generation is important for statistical simulation. R provides random number generators for many commonly used distributions, such as binomial (`rbinom`), normal (`rnorm`), t (`rt`) etc. The syntax is usually a letter "r" followed by the name of the distribution. 
+
+
+```r
+    # generate 10 independent Bernoulli random variables as a vector
+    rbinom(n=10, size = 1, prob = 0.5)
+##  [1] 0 1 0 0 0 1 0 0 0 0
+    # 4 independent random standard normal variables
+    rnorm(n=4)
+## [1] -0.6528241 -1.2476482 -0.3912466  1.9228117
+```
+
+Setting the seed before generating random numbers will allow us to replicate the results when necessary. 
+
+```r
+    # after setting the seed, the two runs will generate exactly the same "random" numbers
+    set.seed(1)
+    rnorm(n=4, mean = 1, sd = 2)
+## [1] -0.2529076  1.3672866 -0.6712572  4.1905616
+    set.seed(1)
+    rnorm(n=4, mean = 1, sd = 2)
+## [1] -0.2529076  1.3672866 -0.6712572  4.1905616
+```
+
+Statistical functions that provides a summary of the data
+
+```r
+    x = rnorm(n=100, mean = 1, sd = 2)
+    y = rnorm(n=100, mean = 2, sd = 1)
+    sum(x)
+## [1] 118.4815
+    mean(x)
+## [1] 1.184815
+    var(x)
+## [1] 3.142351
+    median(x)
+## [1] 1.148906
+    quantile(x, c(0.25, 0.5, 0.75))
+##       25%       50%       75% 
+## 0.0115149 1.1489063 2.2746083
+    cor(x, y)
+## [1] -0.04261199
+```
+\vspace{12pt}
+For discrete data, we usually use the table function
+
+```r
+    set.seed(1); n = 1000
+    x = rbinom(n, size = 1, prob = 0.75)
+    y = rbinom(n, size = 3, prob = c(0.4, 0.3, 0.2, 0.1))
+    table(x)
+## x
+##   0   1 
+## 248 752
+    table(x, y)
+##    y
+## x     0   1   2   3
+##   0 128  79  34   7
+##   1 342 267 125  18
+```
+For a mixture of discrete and continuous data (multiple variables), we often use a data.frame
+
+```r
+    # data.frame is a special data structure that can store both factor and numeric variables
+    z = runif(n, min = 18, max = 65)
+    data = data.frame("Gender" = as.factor(x), "Group" = as.factor(y), "Age" = z)
+    levels(data$Gender) = c("male", "female")
+    levels(data$Group) = c("patient", "physician", "engineer", "statistician")
+    
+    # a peek at the top 3 entries of the data
+    head(data, 3)
+##   Gender     Group      Age
+## 1 female physician 58.97484
+## 2 female physician 63.45826
+## 3 female   patient 58.74506
+    
+    # a brief summary
+    summary(data)
+##     Gender             Group          Age       
+##  male  :248   patient     :470   Min.   :18.03  
+##  female:752   physician   :346   1st Qu.:29.07  
+##               engineer    :159   Median :40.51  
+##               statistician: 25   Mean   :41.02  
+##                                  3rd Qu.:53.43  
+##                                  Max.   :64.99
+    
+    # generate a 2 by 2 table that summarizes Gender and Group
+    table(data[, 1:2])
+##         Group
+## Gender   patient physician engineer statistician
+##   male       128        79       34            7
+##   female     342       267      125           18
+```
+
+\section{4. Simple Statistical Tests}
+
+Fisher Exact Test and Chi-square test are tests of independence between two nominal variables.
+
+
+```r
+    # the test p-value is not significant
+    # recall that we generated the two variables independently.
+    fisher.test(table(data[, 1:2]))
+## 
+## 	Fisher's Exact Test for Count Data
+## 
+## data:  table(data[, 1:2])
+## p-value = 0.3361
+## alternative hypothesis: two.sided
+
+    # chi-square test
+    chisq.test(table(data[, 1:2]))
+## 
+## 	Pearson's Chi-squared test
+## 
+## data:  table(data[, 1:2])
+## X-squared = 3.3437, df = 3, p-value = 0.3416
+```
+
+For continuous variables, we can calculate and test Pearson's correlation, Spearman's rho or Kendall' tau
+
+```r
+    set.seed(1); n = 30
+    x = rnorm(n)
+    y = x + rnorm(n, sd = 2)
+    z = x + rnorm(n, sd = 2)
+    
+    # one can specify method = "kendall" or "spearman" to perform other correlations or tests
+    cor(y, z)
+## [1] 0.5810874
+    cor.test(y, z)
+## 
+## 	Pearson's product-moment correlation
+## 
+## data:  y and z
+## t = 3.7782, df = 28, p-value = 0.0007592
+## alternative hypothesis: true correlation is not equal to 0
+## 95 percent confidence interval:
+##  0.2792861 0.7784002
+## sample estimates:
+##       cor 
+## 0.5810874
+```
+
+
+
+
+
+\section{5. Regression Models}
+
+A simple linear regression assumes the underlying model $Y = \beta X + \epsilon$. With observed data, we can estimate the regression coefficients:
+
+```r
+    # the lm() function is the most commonly used
+    fit = lm(y~x)
+    summary(fit)
+## 
+## Call:
+## lm(formula = y ~ x)
+## 
+## Residuals:
+##     Min      1Q  Median      3Q     Max 
+## -3.0404 -1.0099 -0.4594  1.1506  3.7069 
+## 
+## Coefficients:
+##             Estimate Std. Error t value Pr(>|t|)   
+## (Intercept)   0.2586     0.2964   0.873  0.39032   
+## x             1.0838     0.3249   3.336  0.00241 **
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 1.617 on 28 degrees of freedom
+## Multiple R-squared:  0.2844,	Adjusted R-squared:  0.2588 
+## F-statistic: 11.13 on 1 and 28 DF,  p-value: 0.00241
+```
+
+\section{6. Data Visualization}
+A graphical view usually helps understand the data better. There are a variety of ways to customize your plot, such as color and shape.
+
+
+```r
+    plot(x, y, xlab = "x", ylab = "y", main = "A plot", col = "darkorange", pch = 19)
+    abline(a = fit$coefficients[1], b = fit$coefficients[2], 
+           col = "deepskyblue", lty = 2, lwd = 2)
+    legend("topleft", c("observed points", "fitted line"), lty = c(NA, 2), 
+           pch = c(19, NA), col = c("darkorange", "deepskyblue"))
+```
+
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-9-1.png" width=".49\linewidth" style="display: block; margin: auto;" />
+
+\section{7. Other Things}
+
+\subsection{7.1 Read-in and Save Data}
+R can read-in data from many different sources such as \texttt{.txt}, \texttt{.csv}, etc. For example, \texttt{read.csv()} can be used to import \texttt{.csv} files. The first argument should be specified as the path to the data file, or just the name of the file if the current working directory is the same as the data file. R objects, especially matrices, can be saved into these standard files. Use functions such as \texttt{write.table()} and \texttt{write.csv} to perform this. We can also save any object into \texttt{.RData} file, which can be loaded later on. To do this try functions \texttt{save.image()} and \texttt{save()}.
+
+\subsection{7.2 R Packages}
+One of the most important features of R is its massive collection of packages. A package is like an add-on that can be downloaded and installed and perform additional function and analysis. 
+
+```r
+    # The MASS package can be used to generate multivariate normal distribution 
+    library(MASS)
+    P = 4; N = 200
+    V <- 0.5^abs(outer(1:P, 1:P, "-"))
+    X = as.matrix(mvrnorm(N, mu=rep(0,P), Sigma=V))
+    head(X, 3)
+##            [,1]      [,2]        [,3]        [,4]
+## [1,] -0.5324135  1.022266  0.54818061  0.32146101
+## [2,]  0.4287820 -1.612594 -1.79219165 -0.07651307
+## [3,] -0.5563969 -1.335632  0.03372782 -1.62713529
+```
+
+
+
+
+
+
+
+
 # Modeling Basics in `R`
 
 **TODO:** Instead of specifically considering regression, change the focus of this chapter to modeling, with regression as an example.
@@ -21,18 +243,18 @@ Advertising
 
 ```
 ## # A tibble: 200 x 4
-##        TV Radio Newspaper Sales
-##     <dbl> <dbl>     <dbl> <dbl>
-##  1 230.   37.8      69.2  22.1 
-##  2  44.5  39.3      45.1  10.4 
-##  3  17.2  45.9      69.3   9.30
-##  4 152.   41.3      58.5  18.5 
-##  5 181.   10.8      58.4  12.9 
-##  6   8.70 48.9      75.0   7.20
-##  7  57.5  32.8      23.5  11.8 
-##  8 120.   19.6      11.6  13.2 
-##  9   8.60  2.10      1.00  4.80
-## 10 200.    2.60     21.2  10.6 
+##       TV Radio Newspaper Sales
+##    <dbl> <dbl>     <dbl> <dbl>
+##  1 230.   37.8      69.2  22.1
+##  2  44.5  39.3      45.1  10.4
+##  3  17.2  45.9      69.3   9.3
+##  4 152.   41.3      58.5  18.5
+##  5 181.   10.8      58.4  12.9
+##  6   8.7  48.9      75     7.2
+##  7  57.5  32.8      23.5  11.8
+##  8 120.   19.6      11.6  13.2
+##  9   8.6   2.1       1     4.8
+## 10 200.    2.6      21.2  10.6
 ## # ... with 190 more rows
 ```
 
@@ -50,7 +272,7 @@ plot(Sales ~ TV, data = Advertising, col = "dodgerblue", pch = 20, cex = 1.5,
      main = "Sales vs Television Advertising")
 ```
 
-<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-3-1.png" width="672" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-13-1.png" width="672" />
 
 The `pairs()` function is a useful way to quickly visualize a number of scatter plots.
 
@@ -59,7 +281,7 @@ The `pairs()` function is a useful way to quickly visualize a number of scatter 
 pairs(Advertising)
 ```
 
-<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-4-1.png" width="672" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-14-1.png" width="672" />
 
 Often, we will be most interested in only the relationship between each predictor and the response. For this, we can use the `featurePlot()` function from the `caret` package. (We will use the `caret` package more and more frequently as we introduce new topics.)
 
@@ -69,12 +291,12 @@ library(caret)
 featurePlot(x = Advertising[ , c("TV", "Radio", "Newspaper")], y = Advertising$Sales)
 ```
 
-<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-5-1.png" width="960" />
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-15-1.png" width="960" />
 
 We see that there is a clear increase in `Sales` as `Radio` or `TV` are increased. The relationship between `Sales` and `Newspaper` is less clear. How all of the predictors work together is also unclear, as there is some obvious correlation between `Radio` and `TV`. To investigate further, we will need to model the data.
 
 
-## The `lm()` Function
+## The `lm()` Function {#sec:lm}
 
 The following code fits an additive **linear model** with `Sales` as the response and each remaining variable as a predictor. Note, by not using `attach()` and instead specifying the `data = ` argument, we are able to specify this model without using each of the variable names directly.
 
@@ -331,18 +553,18 @@ cat_pred
 
 ```
 ## # A tibble: 30 x 3
-##    x1        x2      y
-##    <fct>  <dbl>  <dbl>
-##  1 A     0.558  -1.19 
-##  2 A     0.870   0.595
-##  3 A     0.686  -0.558
-##  4 A     0.788   1.18 
-##  5 A     0.979  -1.23 
-##  6 A     0.661  -0.755
-##  7 A     0.0743 -0.992
-##  8 A     0.769  -0.476
-##  9 A     0.655  -0.866
-## 10 A     0.102  -1.49 
+##    x1       x2       y
+##    <fct> <dbl>   <dbl>
+##  1 A     0.588 -1.03  
+##  2 A     0.229  0.659 
+##  3 A     0.391  0.238 
+##  4 A     0.348  0.715 
+##  5 A     0.918 -0.938 
+##  6 A     0.112  0.0954
+##  7 A     0.255 -0.463 
+##  8 A     0.187 -1.47  
+##  9 A     0.746  0.153 
+## 10 A     0.933  1.77  
 ## # ... with 20 more rows
 ```
 
@@ -357,8 +579,8 @@ coef(cat_pred_mod_add)
 ```
 
 ```
-## (Intercept)         x1B         x1C          x2 
-##  -0.6421212   0.5973976   0.7949951   0.1047108
+##  (Intercept)          x1B          x1C           x2 
+##  0.009832548  0.473527836 -0.061384466 -0.078045279
 ```
 
 
@@ -369,7 +591,7 @@ coef(cat_pred_mod_int)
 
 ```
 ## (Intercept)         x1B         x1C          x2      x1B:x2      x1C:x2 
-##  -1.3935618   2.0004628   1.2765280   1.3279982  -2.8159012  -0.7879916
+##  -0.3282363   0.8940364   0.6267084   0.6402953  -0.9208654  -1.4437911
 ```
 
 
@@ -461,9 +683,9 @@ sqrt(mean(exp(resid(mod_8)) ^ 2)) # correct RMSE for Model 8
 
 ## `rmarkdown`
 
-The `rmarkdown` file for this chapter can be found [**here**](04-model-basics.Rmd). The file was created using `R` version 3.4.4. The following packages (and their dependencies) were loaded in this file:
+The `rmarkdown` file for this chapter can be found [**here**](04-model-basics.Rmd). The file was created using `R` version 3.5.0. The following packages (and their dependencies) were loaded in this file:
 
 
 ```
-## [1] "tibble"  "caret"   "ggplot2" "lattice" "readr"
+## [1] "tibble"  "caret"   "ggplot2" "lattice" "readr"   "MASS"
 ```
