--- a/docs/1.2-stat-prob-basics.md
+++ b/docs/1.2-stat-prob-basics.md
@@ -1,6 +1,6 @@
 # Basics of Probability and Statistics
 
-## Random number generation 
+## Random Number Generation 
 
 Random number generation is important for statistical simulation. R provides random number generators for many commonly used distributions, such as binomial (`rbinom`), normal (`rnorm`), t (`rt`) etc. The syntax is usually a letter "r" followed by the name of the distribution. 
 
@@ -8,10 +8,10 @@ Random number generation is important for statistical simulation. R provides ran
 ```r
     # generate 10 independent Bernoulli random variables as a vector
     rbinom(n=10, size = 1, prob = 0.5)
-##  [1] 0 1 0 0 0 1 0 0 0 0
+##  [1] 1 1 1 1 1 0 0 1 1 1
     # 4 independent random standard normal variables
     rnorm(n=4)
-## [1] -0.6528241 -1.2476482 -0.3912466  1.9228117
+## [1] -0.14868630 -0.03086009  2.14017210  0.25368047
 ```
 
 Setting the seed before generating random numbers will allow us to replicate the results when necessary. 
@@ -25,6 +25,8 @@ Setting the seed before generating random numbers will allow us to replicate the
     rnorm(n=4, mean = 1, sd = 2)
 ## [1] -0.2529076  1.3672866 -0.6712572  4.1905616
 ```
+
+## Summary Statistics and Data Exploration
 
 Statistical functions that provides a summary of the data
 
@@ -45,106 +47,73 @@ Statistical functions that provides a summary of the data
     cor(x, y)
 ## [1] -0.04261199
 ```
-\vspace{12pt}
-For discrete data, we usually use the table function
+
+For discrete data, we can use the table function
 
 ```r
-    set.seed(1); n = 1000
-    x = rbinom(n, size = 1, prob = 0.75)
-    y = rbinom(n, size = 3, prob = c(0.4, 0.3, 0.2, 0.1))
-    table(x)
-## x
-##   0   1 
-## 248 752
-    table(x, y)
-##    y
-## x     0   1   2   3
-##   0 128  79  34   7
-##   1 342 267 125  18
-```
-For a mixture of discrete and continuous data (multiple variables), we often use a data.frame
-
-```r
-    # data.frame is a special data structure that can store both factor and numeric variables
-    z = runif(n, min = 18, max = 65)
-    data = data.frame("Gender" = as.factor(x), "Group" = as.factor(y), "Age" = z)
-    levels(data$Gender) = c("male", "female")
-    levels(data$Group) = c("patient", "physician", "engineer", "statistician")
-    
-    # a peek at the top 3 entries of the data
-    head(data, 3)
-##   Gender     Group      Age
-## 1 female physician 58.97484
-## 2 female physician 63.45826
-## 3 female   patient 58.74506
-    
-    # a brief summary
-    summary(data)
-##     Gender             Group          Age       
-##  male  :248   patient     :470   Min.   :18.03  
-##  female:752   physician   :346   1st Qu.:29.07  
-##               engineer    :159   Median :40.51  
-##               statistician: 25   Mean   :41.02  
-##                                  3rd Qu.:53.43  
-##                                  Max.   :64.99
-    
-    # generate a 2 by 2 table that summarizes Gender and Group
-    table(data[, 1:2])
-##         Group
-## Gender   patient physician engineer statistician
-##   male       128        79       34            7
-##   female     342       267      125           18
+    library(ElemStatLearn)
+    data(SAheart)
+    table(SAheart$famhist)
+## 
+##  Absent Present 
+##     270     192
+    table(SAheart[, c("famhist","chd")])
+##          chd
+## famhist     0   1
+##   Absent  206  64
+##   Present  96  96
 ```
 
-\section{4. Simple Statistical Tests}
+## Summary Statistics and Data Exploration
 
-Fisher Exact Test and Chi-square test are tests of independence between two nominal variables.
+Fisher's exact test and the Chi-square test are tests of independence between two nominal variables.
 
 
 ```r
-    # the test p-value is not significant
-    # recall that we generated the two variables independently.
-    fisher.test(table(data[, 1:2]))
+    # We can test the association between family history (famhist) and 
+    # the indicator of coronary heart disease (chd)
+    # using Fisher's Exact
+    fisher.test(table(SAheart[, c("famhist","chd")]))
 ## 
 ## 	Fisher's Exact Test for Count Data
 ## 
-## data:  table(data[, 1:2])
-## p-value = 0.3361
-## alternative hypothesis: two.sided
+## data:  table(SAheart[, c("famhist", "chd")])
+## p-value = 6.658e-09
+## alternative hypothesis: true odds ratio is not equal to 1
+## 95 percent confidence interval:
+##  2.119573 4.891341
+## sample estimates:
+## odds ratio 
+##   3.209996
 
-    # chi-square test
-    chisq.test(table(data[, 1:2]))
+    # or the Chi-square test
+    chisq.test(table(SAheart[, c("famhist","chd")]))
 ## 
-## 	Pearson's Chi-squared test
+## 	Pearson's Chi-squared test with Yates' continuity correction
 ## 
-## data:  table(data[, 1:2])
-## X-squared = 3.3437, df = 3, p-value = 0.3416
+## data:  table(SAheart[, c("famhist", "chd")])
+## X-squared = 33.123, df = 1, p-value = 8.653e-09
 ```
 
-For continuous variables, we can calculate and test Pearson's correlation, Spearman's rho or Kendall' tau
+For continuous variables, data visualization can be very helpful. There are many different ways to customize a plot, such as changing the color, shape, label, etc. For more advanced features, the R package `ggplot2` is a very popular choice. 
 
 ```r
-    set.seed(1); n = 30
-    x = rnorm(n)
-    y = x + rnorm(n, sd = 2)
-    z = x + rnorm(n, sd = 2)
-    
-    # one can specify method = "kendall" or "spearman" to perform other correlations or tests
-    cor(y, z)
-## [1] 0.5810874
-    cor.test(y, z)
-## 
-## 	Pearson's product-moment correlation
-## 
-## data:  y and z
-## t = 3.7782, df = 28, p-value = 0.0007592
-## alternative hypothesis: true correlation is not equal to 0
-## 95 percent confidence interval:
-##  0.2792861 0.7784002
-## sample estimates:
-##       cor 
-## 0.5810874
+    # We use the birthrate data introduced earlier for this example
+    birthrate = read.csv("data/birthrate.csv")
+    plot(birthrate, pch = 19, col = "darkorange", ylab = "Birth Rate",
+         main = "U.S. birth rate (1917 - 2003, per 10000)")
 ```
+
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-6-1.png" width="576" />
+
+Correlations and correlation plots can be used to summarize more varaibles. However, becareful that factors may not be supported by this feature and could cause errors. 
+
+```r
+    suppressMessages(library(PerformanceAnalytics))
+    chart.Correlation(SAheart[, c(1:3)], histogram=TRUE, pch="+")
+```
+
+<img src="1.2-stat-prob-basics_files/figure-html/unnamed-chunk-7-1.png" width="480" />
 
 
 
@@ -152,7 +121,7 @@ For continuous variables, we can calculate and test Pearson's correlation, Spear
 
 \section{5. Regression Models}
 
-A simple linear regression assumes the underlying model $Y = \beta X + \epsilon$. With observed data, we can estimate the regression coefficients:
+A simple linear regression assumes the underlying model $$Y = \beta X + \epsilon.$$ With observed data, we can estimate the regression coefficients:
 
 ```r
     # the lm() function is the most commonly used
@@ -164,18 +133,18 @@ A simple linear regression assumes the underlying model $Y = \beta X + \epsilon$
 ## 
 ## Residuals:
 ##     Min      1Q  Median      3Q     Max 
-## -3.0404 -1.0099 -0.4594  1.1506  3.7069 
+## -1.9355 -0.6563 -0.1596  0.5764  2.3170 
 ## 
 ## Coefficients:
-##             Estimate Std. Error t value Pr(>|t|)   
-## (Intercept)   0.2586     0.2964   0.873  0.39032   
-## x             1.0838     0.3249   3.336  0.00241 **
+##             Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)  2.03700    0.11874  17.156   <2e-16 ***
+## x           -0.02359    0.05588  -0.422    0.674    
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ## 
-## Residual standard error: 1.617 on 28 degrees of freedom
-## Multiple R-squared:  0.2844,	Adjusted R-squared:  0.2588 
-## F-statistic: 11.13 on 1 and 28 DF,  p-value: 0.00241
+## Residual standard error: 0.9856 on 98 degrees of freedom
+## Multiple R-squared:  0.001816,	Adjusted R-squared:  -0.00837 
+## F-statistic: 0.1783 on 1 and 98 DF,  p-value: 0.6738
 ```
 
 \section{6. Data Visualization}
@@ -207,10 +176,10 @@ One of the most important features of R is its massive collection of packages. A
     V <- 0.5^abs(outer(1:P, 1:P, "-"))
     X = as.matrix(mvrnorm(N, mu=rep(0,P), Sigma=V))
     head(X, 3)
-##            [,1]      [,2]        [,3]        [,4]
-## [1,] -0.5324135  1.022266  0.54818061  0.32146101
-## [2,]  0.4287820 -1.612594 -1.79219165 -0.07651307
-## [3,] -0.5563969 -1.335632  0.03372782 -1.62713529
+##           [,1]       [,2]       [,3]       [,4]
+## [1,]  1.233066  1.5191953  2.2469074  1.5273147
+## [2,] -2.238075 -1.8347564 -1.4593319 -1.8318204
+## [3,] -1.181232 -0.3395079  0.2223336 -0.8824585
 ```
 
 
@@ -553,18 +522,18 @@ cat_pred
 
 ```
 ## # A tibble: 30 x 3
-##    x1       x2       y
-##    <fct> <dbl>   <dbl>
-##  1 A     0.588 -1.03  
-##  2 A     0.229  0.659 
-##  3 A     0.391  0.238 
-##  4 A     0.348  0.715 
-##  5 A     0.918 -0.938 
-##  6 A     0.112  0.0954
-##  7 A     0.255 -0.463 
-##  8 A     0.187 -1.47  
-##  9 A     0.746  0.153 
-## 10 A     0.933  1.77  
+##    x1        x2      y
+##    <fct>  <dbl>  <dbl>
+##  1 A     0.528   2.04 
+##  2 A     0.472  -0.326
+##  3 A     0.0482  0.774
+##  4 A     0.595   0.785
+##  5 A     0.791   0.763
+##  6 A     0.599   0.295
+##  7 A     0.0279 -1.25 
+##  8 A     0.396  -1.01 
+##  9 A     0.106   0.751
+## 10 A     0.0241 -1.31 
 ## # ... with 20 more rows
 ```
 
@@ -579,8 +548,8 @@ coef(cat_pred_mod_add)
 ```
 
 ```
-##  (Intercept)          x1B          x1C           x2 
-##  0.009832548  0.473527836 -0.061384466 -0.078045279
+## (Intercept)         x1B         x1C          x2 
+## 0.007280546 0.067302562 0.142073630 0.400090509
 ```
 
 
@@ -591,7 +560,7 @@ coef(cat_pred_mod_int)
 
 ```
 ## (Intercept)         x1B         x1C          x2      x1B:x2      x1C:x2 
-##  -0.3282363   0.8940364   0.6267084   0.6402953  -0.9208654  -1.4437911
+## -0.48153539  1.20529786  0.13474064  1.76290161 -3.14845764 -0.05720444
 ```
 
 
@@ -687,5 +656,8 @@ The `rmarkdown` file for this chapter can be found [**here**](04-model-basics.Rm
 
 
 ```
-## [1] "tibble"  "caret"   "ggplot2" "lattice" "readr"   "MASS"
+##  [1] "tibble"               "caret"                "ggplot2"             
+##  [4] "lattice"              "readr"                "MASS"                
+##  [7] "PerformanceAnalytics" "xts"                  "zoo"                 
+## [10] "ElemStatLearn"
 ```
